--- a/src/static/style/base.sass
+++ b/src/static/style/base.sass
@@ -26,10 +26,36 @@ $gray: #706f6e
     font-size: 1.2em
     color: gray
 
-  > img
+  > .resume
     position: absolute
-    display: block
     top: .5em
     right: .5em
-    height: 3em
-    width: auto
+    cursor: pointer
+
+    > .text
+      position: absolute
+      top: 0
+      right: 7em
+      width: 15em
+      height: auto
+
+    > .arrow
+      position: absolute
+      top: 1.5em
+      right: 4.5em
+      width: 15em
+      height: auto
+
+    > .paper
+      position: absolute
+      top: .8em
+      right: 1.4em
+      height: 3em
+      width: auto
+
+    > .circle
+      position: absolute
+      top: 0
+      right: 0
+      height: 5em
+      width: auto
