--- a/src/static/style/base.css
+++ b/src/static/style/base.css
@@ -24,9 +24,9 @@
     cursor: pointer; }
     #header > .resume > .text {
       position: absolute;
-      top: 0;
+      top: -0.5em;
       right: 7em;
-      width: 15em;
+      width: 20em;
       height: auto; }
     #header > .resume > .arrow {
       position: absolute;
