--- a/src/static/style/base.sass
+++ b/src/static/style/base.sass
@@ -34,9 +34,9 @@ $gray: #706f6e
 
     > .text
       position: absolute
-      top: 0
+      top: -.5em
       right: 7em
-      width: 15em
+      width: 20em
       height: auto
 
     > .arrow
