Added mobile formatting.

--- a/src/static/style/base.sass
+++ b/src/static/style/base.sass
@@ -134,3 +134,49 @@ a
   padding: .1em 0
   background-color: $light-gray
   text-align: center
+
+@media screen and (max-width: 1575px)
+  body
+    margin: 5em 15em
+
+@media screen and (max-width: 1415px)
+  body
+    margin: 5em 10em
+
+@media screen and (max-width: 1255px)
+  body
+    margin: 5em
+
+@media screen and (max-width: 1095px)
+  body
+    margin: 5em 10em
+
+  #header
+    > .resume
+      > .text
+        top: .5em
+        width: 12em
+
+      > .arrow
+        top: 2em
+        right: 5.5em
+        width: 7em
+
+@media screen and (max-width: 935px)
+  body
+    margin: 3em
+
+@media screen and (max-width: 710px)
+  #header
+    > .resume
+      top: -2.5em
+      right: -2.5em
+
+  #projects
+    > .project-list
+      justify-content: space-around
+
+@media screen and (max-width: 420px)
+  #header
+    > .resume
+      display: none
