--- a/src/static/style/base.css
+++ b/src/static/style/base.css
@@ -111,4 +111,38 @@ a {
   background-color: #e9e8e6;
   text-align: center; }
 
+@media screen and (max-width: 1575px) {
+  body {
+    margin: 5em 15em; } }
+@media screen and (max-width: 1415px) {
+  body {
+    margin: 5em 10em; } }
+@media screen and (max-width: 1255px) {
+  body {
+    margin: 5em; } }
+@media screen and (max-width: 1095px) {
+  body {
+    margin: 5em 10em; }
+
+  #header > .resume > .text {
+    top: 0.5em;
+    width: 12em; }
+  #header > .resume > .arrow {
+    top: 2em;
+    right: 5.5em;
+    width: 7em; } }
+@media screen and (max-width: 935px) {
+  body {
+    margin: 3em; } }
+@media screen and (max-width: 710px) {
+  #header > .resume {
+    top: -2.5em;
+    right: -2.5em; }
+
+  #projects > .project-list {
+    justify-content: space-around; } }
+@media screen and (max-width: 420px) {
+  #header > .resume {
+    display: none; } }
+
 /*# sourceMappingURL=base.css.map */
