--- a/blog/wp-content/themes/futl/style.css
+++ b/blog/wp-content/themes/futl/style.css
@@ -1,6 +1,6 @@
-/* Theme Name: Futl
- * Theme URI: http://blog.forustheliving.com/
- * Description: Custom Theme for 'For Us, The Living'
+/* Theme Name: MikeBelzer
+ * Theme URI: http://www.mikebelzer.com/
+ * Description: Custom Theme for 'MikeBelzer.com'
  * Author: Robert Ingrum
  * Author URI: http://www.forustheliving.com/
  * Version: 1.0 */
