--- a/blog/wp-content/themes/futl/static/style/base.scss
+++ b/blog/wp-content/themes/futl/static/style/base.scss
@@ -1,19 +1,17 @@
-$colors: (
-        primary: #000,
-        secondary: #555,
-        gray: #888,
-        light-gray: #ccc,
-        dark-gray: #333,
-        text: #dfdddf,
-        background: #101511,
-        secondary-background: #909591,
-        black: #000,
-        white: #fff
-);
+$black: #000;
+$primary: #000;
+$background: #101511;
+$dark-gray: #333;
+$link-gray: #555;
+$gray: #888;
+$secondary-background: #909591;
+$text-gray: #dfdddf;
+$light-gray: #ccc;
+$white: #fff;
 
 * {
   font-family: 'Arial', serif;
-  color: map-get($colors, text);
+  color: $text-gray;
   box-sizing: border-box;
 }
 
@@ -32,7 +30,7 @@ body {
   height: 100%;
   width: 100%;
   margin: 0;
-  background: map-get($colors, black) url('../images/main_background.png') no-repeat center top;
+  background: $black url('../images/mbbg.png') no-repeat center top;
   background-size: 100% auto;
 
   > #wpadminbar {
@@ -42,9 +40,9 @@ body {
 }
 
 a {
-  $link-color: map-get($colors, secondary);
-  $link-hover-color: map-get($colors, secondary) - 20;
-  $link-active-color: map-get($colors, secondary) - 40;
+  $link-color: $link-gray;
+  $link-hover-color: $link-gray - 20;
+  $link-active-color: $link-gray - 40;
 
   color: $link-color;
   text-decoration: none;
@@ -79,8 +77,6 @@ a {
 
 #header {
   margin-top: 30px;
-  background-color: rgba(map-get($colors, secondary-background), .3);
-  border-bottom: 1px solid rgba(map-get($colors, secondary-background), .5);
   border-top-left-radius: .5em;
   border-top-right-radius: .5em;
 
@@ -91,38 +87,43 @@ a {
     > #site-logo {
       font-weight: 300;
       border: none;
-      color: map-get($colors, white);
+      color: $white;
     }
   }
 }
 
 #navigation {
+  $nav-background-color:  $dark-gray;
+  $nav-border-color:      $dark-gray - 10;
+  $nav-font-color:        $light-gray;
+
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-around;
   align-items: center;
-  background-color: map-get($colors, dark-gray);
+  background-color: $nav-background-color;
   padding: 0;
 
   li {
     display: block;
     width: 100%;
     list-style: none;
+    border: 1px solid $nav-border-color;
 
     a {
       display: block;
       padding: .5em 0;
-      background: map-get($colors, light-gray);
+      background: $nav-background-color;
+      color: $nav-font-color;
       font-size: 1.25em;
       text-align: center;
+
+      &:hover,
+      &:visited { color: $nav-font-color }
     }
 
-    &:hover {
-      a {
-        background: map-get($colors, light-gray) - 50;
-      }
-    }
+    &:hover a { background: $nav-background-color - 10 }
   }
 }
 
@@ -135,20 +136,24 @@ a {
 
 
 #content {
-  background-color: map-get($colors, dark-gray);
+  background-color: $dark-gray;
   border-bottom-left-radius: .5em;
   border-bottom-right-radius: .5em;
 
   > .post {
     padding: .5em 0;
 
-    &:not(:first-of-type) { border-top: 1px solid map-get($colors, gray) }
-    &:not(:last-of-type)  { border-bottom: 1px solid map-get($colors, gray) }
+    &:not(:first-of-type) { border-top: 1px solid $gray }
+    &:not(:last-of-type)  { border-bottom: 1px solid $gray }
 
     > h2 {
       margin: 0;
 
-      > a { border: none }
+      &,
+      > a {
+        border: none;
+        color: $light-gray;
+      }
     }
 
     > h5 {
@@ -158,7 +163,10 @@ a {
       > a { border: none }
     }
 
-    .nocomments { display: none }
+    .title { margin-bottom: 1em; }
+
+    .nocomments,
+    .details { display: none}
   }
 
   > #archives-page {
@@ -178,8 +186,8 @@ a {
 #respond {
   padding: .5em 1.5em;
   font-size: .7em;
-  border: 1px solid map-get($colors, light-gray);
-  background-color: map-get($colors, light-gray) + 17;
+  border: 1px solid $light-gray;
+  background-color: $light-gray + 17;
 
   > form {
     display: flex;
@@ -213,7 +221,7 @@ a {
 
       > label,
       > input {
-        width: 100%;
+        width: 100%;  // Fallback if browser doesn't support calc
         width: calc(100% - 8px);
         padding: 2px;
         border-width: 2px;
@@ -223,8 +231,8 @@ a {
 }
 
 .commentlist {
-  border: 1px solid map-get($colors, light-gray);
-  background: map-get($colors, light-gray) + 17;
+  border: 1px solid $light-gray;
+  background: $light-gray + 17;
   list-style: none;
 
   li, ol { list-style: none }
@@ -251,7 +259,12 @@ a {
 
 #footer {
   text-align: center;
-  color: map-get($colors, white);
+  color: $white;
 
-  a { color: map-get($colors, white); }
+  a { color: $white; }
+}
+
+.wpsisac-slick-slider {
+  button.slick-arrow { background-color: transparent !important; }
+  .slick-image-slide img { width: 100%; }
 }
