--- a/blog/wp-content/themes/futl/static/style/base.scss
+++ b/blog/wp-content/themes/futl/static/style/base.scss
@@ -94,7 +94,7 @@ a {
 
 #contact {
   position: absolute;
-  top: 0;
+  top: -30px;
   right: 0;
   padding: .5em 1em;
   background-color: $dark-gray;
