--- a/blog/wp-content/themes/futl/static/style/base.scss
+++ b/blog/wp-content/themes/futl/static/style/base.scss
@@ -131,6 +131,8 @@ a {
     list-style: none;
     border: 1px solid $nav-border-color;
 
+    &.current_page_item a { background: $nav-background-color + 20; }
+
     a {
       display: block;
       padding: .5em 0;
@@ -288,3 +290,6 @@ a {
   button.slick-arrow { background-color: transparent !important; }
   .slick-image-slide img { width: 100%; }
 }
+
+.ngg-album-desc { color: $white; }
+.slideshowlink { display: none; }
