--- a/blog/wp-content/themes/futl/static/style/base.css
+++ b/blog/wp-content/themes/futl/static/style/base.css
@@ -223,4 +223,15 @@ a {
 .slideshowlink {
   display: none; }
 
+.email-popup {
+  display: none;
+  position: absolute;
+  top: 2em;
+  padding: .5em;
+  background-color: #222;
+  border-radius: 3px; }
+  .email-popup a {
+    color: #fff;
+    border-color: #fff; }
+
 /*# sourceMappingURL=base.css.map */
