--- a/blog/wp-content/themes/futl/static/style/base.css
+++ b/blog/wp-content/themes/futl/static/style/base.css
@@ -55,13 +55,13 @@ a {
   margin-top: 30px;
   border-top-left-radius: .5em;
   border-top-right-radius: .5em; }
-  #header > h1 {
-    margin: 0;
-    font-size: 2em; }
-    #header > h1 > #site-logo {
-      font-weight: 300;
-      border: none;
-      color: #fff; }
+  #header > #site-logo {
+    display: block;
+    max-width: 600px;
+    margin: 0 auto;
+    border: none; }
+    #header > #site-logo img {
+      width: 100%; }
 
 #contact {
   position: absolute;
@@ -70,7 +70,8 @@ a {
   padding: .5em 1em;
   background-color: #222;
   border-bottom-left-radius: .5em;
-  border-bottom-right-radius: .5em; }
+  border-bottom-right-radius: .5em;
+  letter-spacing: 1px; }
   #contact span {
     padding-right: .5em; }
   #contact a {
@@ -100,8 +101,10 @@ a {
       padding: .5em 0;
       background: #222;
       color: #ccc;
-      font-size: 1.25em;
-      text-align: center; }
+      font-size: 1.1em;
+      text-align: center;
+      letter-spacing: 2px;
+      text-transform: uppercase; }
       #navigation li a:hover, #navigation li a:visited {
         color: #ccc; }
     #navigation li:hover a {
